--- a/wpfclient/MainWindow.xaml
+++ b/wpfclient/MainWindow.xaml
@@ -5,14 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:wpfclient" xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
                        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" WindowState="Maximized" ResizeMode="NoResize">
+        Title="Viet ED" Height="1366" Width="766" WindowState="Maximized" ResizeMode="NoResize">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="150"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="30"/>
+            <RowDefinition Height="5"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid Grid.Row="1">
@@ -30,11 +30,15 @@
                 <DropShadowEffect BlurRadius="20" Color="#FFDEDEDE" RenderingBias="Quality" ShadowDepth="1"/>
             </Grid.Effect>
 
-            <Grid Background="#7be9f6">
-                <TextBlock Text="DASHBOARD" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="WS Simple Gallifreyan" Foreground="#FFBC96EA" FontSize="16"/>
+            <Grid Background="White">
+                <Ellipse Height="80" Width="80">
+                    <Ellipse.Fill>
+                        <ImageBrush ImageSource="download.png"/>
+                    </Ellipse.Fill>
+                </Ellipse>
             </Grid>
 
-            <StackPanel Grid.Row="1">
+            <StackPanel Background="White" Grid.Row="1">
                 <Button Margin="10" Background="#FF162662" BorderBrush="MintCream">
                     <Grid Width="150">
                         <Grid.ColumnDefinitions>
@@ -45,13 +49,150 @@
                                                 VerticalAlignment="Center" 
                                                 HorizontalAlignment="Center" 
                                                 Foreground="White"/>
-                        <TextBlock Foreground="White" VerticalAlignment="Center" Grid.Column="1" Text="DASHBOARD" FontFamily="Helvetica"/>
+                        <TextBlock Foreground="White" VerticalAlignment="Center" Grid.Column="1" Text="Home" FontFamily="Microsoft YaHei Light"/>
                     </Grid>
                 </Button>
-
-              
+                <Button Margin="10" Background="#FF162662" BorderBrush="MintCream">
+                    <Grid Width="150">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*"></ColumnDefinition>
+                            <ColumnDefinition Width="3*"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <iconPacks:PackIconMaterial Kind="Account"
+                                                VerticalAlignment="Center" 
+                                                HorizontalAlignment="Center" 
+                                                Foreground="White"/>
+                        <TextBlock Foreground="White" VerticalAlignment="Center" Grid.Column="1" Text="Store" FontFamily="Microsoft YaHei Light"/>
+                    </Grid>
+                </Button>
+                <Button Margin="10" Background="#FF162662" BorderBrush="MintCream">
+                    <Grid Width="150">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*"></ColumnDefinition>
+                            <ColumnDefinition Width="3*"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <iconPacks:PackIconMaterial Kind="Account"
+                                                VerticalAlignment="Center" 
+                                                HorizontalAlignment="Center" 
+                                                Foreground="White"/>
+                        <TextBlock Foreground="White" VerticalAlignment="Center" Grid.Column="1" Text="Customers" FontFamily="Microsoft YaHei Light"/>
+                    </Grid>
+                </Button>
             </StackPanel>
         </Grid>
-
+        <Grid Grid.Column="1" Grid.Row="1" Background="#FFCFCFCF">
+            <ScrollViewer>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="120"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Grid Grid.Row="0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid Grid.Column="0">
+                            <Rectangle Height="80" Margin="20" Fill="White" RadiusY="10" RadiusX="10" >
+                                <Rectangle.Effect>
+                                    <DropShadowEffect BlurRadius="20" Color="#FFDEDEDE" RenderingBias="Quality" ShadowDepth="1"/>
+                                </Rectangle.Effect>
+                            </Rectangle>
+                            <Grid Margin="25" Height="80">
+                                <Grid Width="35" Height="50" Background="#FFFFAF24" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20 0">
+                                    <Grid.Effect>
+                                        <DropShadowEffect BlurRadius="20" Color="#FFECECEC" RenderingBias="Quality" ShadowDepth="1"/>
+                                    </Grid.Effect>
+                                    <iconPacks:PackIconMaterial Kind="Cart" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="5" Foreground="White" Width="20" Height="20"/>
+                                </Grid>
+                                <TextBlock Text="Total Bills" HorizontalAlignment="Right" FontFamily="Helvetica" Margin="5" VerticalAlignment="Top" Foreground="Gray"/>
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10 20">
+                                    <TextBlock Text="49" FontFamily="Microsoft YaHei Light" VerticalAlignment="Center" Foreground="Gray" FontSize="23"/>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="10" Cursor="Hand">
+                                    <iconPacks:PackIconMaterial Kind="EmoticonHappy" Foreground="DeepSkyBlue" Width="10" Height="10" VerticalAlignment="Center" Margin="5 0"/>
+                                    <TextBlock Text="Up 20% compare yesterday" FontSize="8" Foreground="#FF8522BD"/>
+                                </StackPanel>
+                            </Grid>
+                        </Grid>
+                        <Grid Grid.Column="1">
+                            <Rectangle Height="80" Margin="20" Fill="White" RadiusY="10" RadiusX="10" >
+                                <Rectangle.Effect>
+                                    <DropShadowEffect BlurRadius="20" Color="#FFDEDEDE" RenderingBias="Quality" ShadowDepth="1"/>
+                                </Rectangle.Effect>
+                            </Rectangle>
+                            <Grid Margin="25" Height="80">
+                                <Grid Width="35" Height="50" Background="#FF41A43C" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20 0">
+                                    <Grid.Effect>
+                                        <DropShadowEffect BlurRadius="20" Color="#FFECECEC" RenderingBias="Quality" ShadowDepth="1"/>
+                                    </Grid.Effect>
+                                    <iconPacks:PackIconMaterial Kind="Store" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="5" Foreground="White" Width="20" Height="20"/>
+                                </Grid>
+                                <TextBlock Text="Revenue" HorizontalAlignment="Right" FontFamily="Microsoft YaHei Light" Margin="5" VerticalAlignment="Top" Foreground="Gray"/>
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10 30">
+                                    <TextBlock Text="35.6" FontFamily="Microsoft YaHei Light" VerticalAlignment="Center" Foreground="Gray" FontSize="23"/>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="10">
+                                    <iconPacks:PackIconMaterial Kind="EmoticonHappy" Foreground="DeepSkyBlue" Width="10" Height="10" VerticalAlignment="Center" Margin="5 0"/>
+                                    <TextBlock Text="Ultimas 24h" FontSize="8" Foreground="Gray"/>
+                                </StackPanel>
+                            </Grid>
+                        </Grid>
+                        <Grid Grid.Column="2">
+                            <Rectangle Height="80" Margin="20" Fill="White" RadiusY="10" RadiusX="10" >
+                                <Rectangle.Effect>
+                                    <DropShadowEffect BlurRadius="20" Color="#FFDEDEDE" RenderingBias="Quality" ShadowDepth="1"/>
+                                </Rectangle.Effect>
+                            </Rectangle>
+                            <Grid Margin="25" Height="80">
+                                <Grid Width="35" Height="50" Background="DeepSkyBlue" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20 0">
+                                    <Grid.Effect>
+                                        <DropShadowEffect BlurRadius="20" Color="#FFECECEC" RenderingBias="Quality" ShadowDepth="1"/>
+                                    </Grid.Effect>
+                                    <iconPacks:PackIconMaterial Kind="StackExchange" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="5" Foreground="White" Width="20" Height="20"/>
+                                </Grid>
+                                <TextBlock Text="Monthly Statistics" HorizontalAlignment="Right" FontFamily="Microsoft YaHei Light" Margin="5" VerticalAlignment="Top" Foreground="Gray"/>
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10 30">
+                                    <TextBlock Text="75" FontFamily="Microsoft YaHei Light" VerticalAlignment="Center" Foreground="Gray" FontSize="23"/>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="20">
+                                    <iconPacks:PackIconMaterial Kind="CalendarMonth" Foreground="Gray" Width="10" Height="10" VerticalAlignment="Center" Margin="5 0"/>
+                                    <TextBlock Text="Monthly Overview" FontSize="8" Foreground="Gray"/>
+                                </StackPanel>
+                            </Grid>
+                        </Grid>
+                        <Grid Grid.Column="3">
+                            <Rectangle Height="80" Margin="20" Fill="White" RadiusY="10" RadiusX="10" >
+                                <Rectangle.Effect>
+                                    <DropShadowEffect BlurRadius="20" Color="#FFDEDEDE" RenderingBias="Quality" ShadowDepth="1"/>
+                                </Rectangle.Effect>
+                            </Rectangle>
+                            <Grid Margin="25" Height="80">
+                                <Grid Width="35" Height="50" Background="Orange" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20 0">
+                                    <Grid.Effect>
+                                        <DropShadowEffect BlurRadius="20" Color="#FFECECEC" RenderingBias="Quality" ShadowDepth="1"/>
+                                    </Grid.Effect>
+                                    <iconPacks:PackIconMaterial Kind="Truck" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="5" Foreground="White" Width="20" Height="20"/>
+                                </Grid>
+                                <TextBlock Text="Inventory Status" HorizontalAlignment="Right" FontFamily="Microsoft YaHei Light" Margin="5" VerticalAlignment="Top" Foreground="Gray"/>
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10 30">
+                                    <TextBlock Text="75" FontFamily="Microsoft YaHei Light" VerticalAlignment="Center" Foreground="Gray" FontSize="23"/>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="20">
+                                    <iconPacks:PackIconMaterial Kind="Bandage" Foreground="red" Width="10" Height="10" VerticalAlignment="Center" Margin="5 0"/>
+                                    <TextBlock Text="Have products run out" FontSize="8" Foreground="red"/>
+                                </StackPanel>
+                            </Grid>
+                        </Grid>
+                    </Grid>
+                    <Grid Grid.Row="1">
+                        <DataGrid></DataGrid>
+                    </Grid>
+                </Grid>
+            </ScrollViewer>
+        </Grid>
+       
     </Grid>
 </Controls:MetroWindow>
